[package]
name = "timer"
version = "0.1.0"
edition = "2021"
authors = ["Shea Frembling"]
description = "A tiny crate used for timing individual functions"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
